FrameView destructor is worried about being retained by a renderer. <https://webkit.org/b/123763>

There's no way we can be in ~FrameView() while also being owned by
a RenderWidget. Remove some overly paranoid code that was making sure
the renderer didn't have a reference on us.

Reviewed by Anders Carlsson.


Canonical link: https://commits.webkit.org/141959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158625 268f45cc-cd09-0410-ab3c-d52691b4dbfc